# infrastructural-capability-analysis

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  README.md  SCALABILITY.md  pyproject.toml  requirements.txt  run_analysis.py
.claude/: settings.local.json
.github/workflows/: ci.yml
notebooks/: 01_EDA.ipynb  02_Regression.ipynb  03_Causal_DAG.ipynb
src/: __init__.py
src/analysis/: __init__.py  build_network.py  causal_analysis.py  compute_variables.py  visualize.py
src/data_fetch/: __init__.py  crossref_enrich.py  datacite_enrich.py  download_dumps.py  parse_openaire.py
src/utils/: __init__.py  governance_bodies.csv  io.py  logging.py
tests/: test_api_mocks.py
